# OP_papildoma_uzduotis

./: .gitignore  CMakeLists.txt  README.md
data/: nuorodos_testavimui.txt  papartynu_saule_90531_zodziai.txt  tekstas_angliskas.txt  text_1.txt  text_no_url_1.txt  text_no_url_2.txt  text_yes_url_1.txt  text_yes_url_2.txt  text_yes_url_3.txt
include/: text_processor.h
output/: cleaned_text_1.txt  cleaned_text_2.txt  domain_count_text_1.txt  domain_xref_text_1.txt  word_count.txt
src/: main.cpp  text_processor.cpp
